--- a/.gitignore
+++ b/.gitignore
@@ -120,13 +120,14 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.virt
+virt/
+VIRT/
+virt.bak/
+VIRT.bak/
+
 
 # Spyder project settings
 .spyderproject
